--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>    
+
     <title>Portifolio</title>
 </head>
-<body>
-    
 
+<body>
+    <header class="header">
+        <a href="#" class="logo">DevBritto.</a>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <nav class="navbar">
+            <a href="Inicio" class="active">Inicio</a>
+            <a href="Sobre">Sobre</a>
+            <a href="Formação">Formação</a>
+            <a href="Habilidades">Habilidades</a>
+            <a href="Contato">Contato</a>
+        </nav>
+    </header>
 
     <script src="./index.js"></script>
 </body>
+
 </html>
