--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
         </nav>
     </header>
 
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Olá, Eu sou <span>DevBritto</span></h1>
+            <div class="text-animate">
+                <h3>Frontend Developer</h3>
+            </div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam saepe, ipsa dolores placeat molestias soluta illo fuga deserunt praesentium expedita labore non ab minima dolore. Consectetur modi saepe quo voluptatibus.</p>
+
+            <div class="btn-box">
+                <a href="#" class="btn">Contrate-me</a>
+                <a href="#" class="btn">Vamos conversar</a>
+            </div>
+        </div>
+
+        <div class="home-sci">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
+    </section>
+
     <script src="./index.js"></script>
 </body>
 
