--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>    
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <title>Portifolio</title>
 </head>
@@ -36,7 +36,9 @@
             <div class="text-animate">
                 <h3>Frontend Developer</h3>
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam saepe, ipsa dolores placeat molestias soluta illo fuga deserunt praesentium expedita labore non ab minima dolore. Consectetur modi saepe quo voluptatibus.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam saepe, ipsa dolores placeat molestias
+                soluta illo fuga deserunt praesentium expedita labore non ab minima dolore. Consectetur modi saepe quo
+                voluptatibus.</p>
 
             <div class="btn-box">
                 <a href="#" class="btn">Contrate-me</a>
@@ -48,6 +50,79 @@
             <a href="#"><i class='bx bxl-facebook'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
             <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
+
+        <div class="home-imgHover"></div>
+    </section>
+
+    <section class="about" id="about">
+        <h2 class="heading">Sobre <span>Mim</span></h2>
+
+        <div class="about-img">
+            <img src="./assets/Imagem fundo 2.png" alt="">
+            <span class="circle-spin"></span>
+        </div>
+
+        <div class="about-content">
+            <h3>Frontend Developer!</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero porro ipsum officiis qui eaque hic
+                doloribus corporis expedita in facere. Beatae, architecto! Sit ut molestiae quos. Rem delectus
+                praesentium porro.</p>
+
+            <div class="btn-box btns">
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="education" id="education">
+        <h2 class="heading">Minha <span>Jornada</span></h2>
+
+        <div class="education-row">
+            <div class="education-column">
+                <h3 class="title">Formação</h3>
+
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2022-Outubro</div>
+                            <h3>Curso em vídeo - Lógica de programação 40 horas</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis modi porro fuga enim
+                                placeat temporibus, praesentium deserunt dicta ipsam saepe! Excepturi, nemo accusamus
+                                sequi voluptatem blanditiis modi quam consectetur laborum!</p>
+                        </div>
+                    </div>
+                </div>
+
+                
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2022-2023</div>
+                            <h3>DevClub - Curso de programação FullStack</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis modi porro fuga enim
+                                placeat temporibus, praesentium deserunt dicta ipsam saepe! Excepturi, nemo accusamus
+                                sequi voluptatem blanditiis modi quam consectetur laborum!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                <div class="education-column">
+                    <h3 class="title">Experiência</h3>
+                    <div class="education-box">
+                        <div class="education-content">
+                            <div class="content">
+                                <div class="year"><i class='bx bxs-calendar'></i> 2023-Atual</div>
+                                <h3>Desenvolvendo sites para terceiros</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis modi porro fuga enim
+                                    placeat temporibus, praesentium deserunt dicta ipsam saepe! Excepturi, nemo
+                                    accusamus sequi voluptatem blanditiis modi quam consectetur laborum!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
         </div>
     </section>
 
