--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <nav class="navbar">
-            <a href="Inicio" class="active">Inicio</a>
-            <a href="Sobre">Sobre</a>
-            <a href="Formação">Formação</a>
-            <a href="Habilidades">Habilidades</a>
-            <a href="Contato">Contato</a>
+            <a href="#Inicio" class="active">Inicio</a>
+            <a href="#Sobre">Sobre</a>
+            <a href="#Formação">Formação</a>
+            <a href="#Habilidades">Habilidades</a>
+            <a href="#Contato">Contato</a>
         </nav>
     </header>
 
@@ -151,7 +151,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>NODE <span>35%</span></h3>
+                            <h3>NODE <span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -191,6 +191,54 @@
 
         </div>
     </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contate <span>Me</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <div class="input-field">
+                    <input type="text" placeholder="Full Name" required>
+                    <span class="focus"></span>
+                </div>
+                <div class="input-field">
+                    <input type="text" placeholder="Email Address" required>
+                    <span class="focus"></span>
+                </div>
+            </div>
+
+            <div class="input-box">
+                <div class="input-field">
+                    <input type="number" placeholder="Mobile Number" required>
+                    <span class="focus"></span>
+                </div>
+                <div class="input-field">
+                    <input type="text" placeholder="Email Subject" required>
+                    <span class="focus"></span>
+                </div>
+            </div>
+
+            <div class="textarea-field">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+                <span class="focus"></span>
+            </div>
+
+            <div class="btn-box btns">
+                <button type="submit" class="btn">Submit</button>
+            </div>
+
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by DevBritto | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </footer>
 
     <script src="./index.js"></script>
 </body>
