--- a/index.html
+++ b/index.html
@@ -17,32 +17,37 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">DevBritto.</a>
+        <a href="#" class="logo">DevBritto.<span class="animate" style="--i:1;"></span></a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
         <nav class="navbar">
-            <a href="#Inicio" class="active">Inicio</a>
-            <a href="#Sobre">Sobre</a>
-            <a href="#Formação">Formação</a>
-            <a href="#Habilidades">Habilidades</a>
-            <a href="#Contato">Contato</a>
+            <a href="#home" class="active"  >Inicio</a>
+            <a href="#about">Sobre</a>
+            <a href="#education">Formação</a>
+            <a href="#skills">Habilidades</a>
+            <a href="#contact">Contato</a>
+
+            <span class="active-nav"></span>
+            <span class="animate" style="--i:2;"></span>
         </nav>
     </header>
 
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Olá, Eu sou <span>DevBritto</span></h1>
+            <h1>Olá, Eu sou <span>DevBritto</span> <span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>Frontend Developer</h3>
+                <span class="animate" style="--i:3;"></span>
             </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam saepe, ipsa dolores placeat molestias
                 soluta illo fuga deserunt praesentium expedita labore non ab minima dolore. Consectetur modi saepe quo
                 voluptatibus.</p>
-
+                <span class="animate" style="--i:4;"></span>
             <div class="btn-box">
                 <a href="#" class="btn">Contrate-me</a>
                 <a href="#" class="btn">Vamos conversar</a>
+                <span class="animate" style="--i:5;"></span>
             </div>
         </div>
 
@@ -50,37 +55,43 @@
             <a href="#"><i class='bx bxl-facebook'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
             <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <span class="animate" style="--i:6;"></span>
         </div>
 
         <div class="home-imgHover"></div>
+        <span class="animate home-img" style="--i:7;"></span>
     </section>
 
     <section class="about" id="about">
-        <h2 class="heading">Sobre <span>Mim</span></h2>
+        <h2 class="heading">Sobre <span>Mim</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
             <img src="./assets/Imagem fundo 2.png" alt="">
             <span class="circle-spin"></span>
+            <span class="animate scroll" style="--i:2;"></span>
         </div>
 
         <div class="about-content">
-            <h3>Frontend Developer!</h3>
+            <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero porro ipsum officiis qui eaque hic
                 doloribus corporis expedita in facere. Beatae, architecto! Sit ut molestiae quos. Rem delectus
-                praesentium porro.</p>
-
+                praesentium porro.
+                <span class="animate scroll" style="--i:4;"></span>
+            </p>
+                
             <div class="btn-box btns">
                 <a href="#" class="btn">Read More</a>
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
         </div>
     </section>
 
     <section class="education" id="education">
-        <h2 class="heading">Minha <span>Jornada</span></h2>
+        <h2 class="heading">Minha <span>Jornada</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="education-row">
             <div class="education-column">
-                <h3 class="title">Formação</h3>
+                <h3 class="title">Formação<span class="animate scroll" style="--i:2;"></span></h3>
 
                 <div class="education-box">
                     <div class="education-content">
@@ -91,6 +102,8 @@
                                 placeat temporibus, praesentium deserunt dicta ipsam saepe! Excepturi, nemo accusamus
                                 sequi voluptatem blanditiis modi quam consectetur laborum!</p>
                         </div>
+
+                        <span class="animate scroll" style="--i:3;"></span>
                     </div>
                 </div>
 
@@ -105,11 +118,13 @@
                                 sequi voluptatem blanditiis modi quam consectetur laborum!</p>
                         </div>
                     </div>
+
+                    <span class="animate scroll" style="--i:3;"></span>
                 </div>
             </div>
 
                 <div class="education-column">
-                    <h3 class="title">Experiência</h3>
+                    <h3 class="title">Experiência<span class="animate scroll" style="--i:5;"></span></h3>
                     <div class="education-box">
                         <div class="education-content">
                             <div class="content">
@@ -120,17 +135,18 @@
                                     accusamus sequi voluptatem blanditiis modi quam consectetur laborum!</p>
                             </div>
                         </div>
+                        <span class="animate scroll" style="--i:6;"></span>
                     </div>
                 </div>
         </div>
     </section>
 
     <section class="skills" id="skills">
-        <h2 class="heading">Minhas <span>Habilidades</span></h2>
+        <h2 class="heading">Minhas <span>Habilidades</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="skills-row">
             <div class="skills-column">
-                <h3 class="title">Coding Skills</h3>
+                <h3 class="title">Coding Skills<span class="animate scroll" style="--i:2;"></span></h3>
 
                 <div class="skills-box">
                     <div class="skills-content">
@@ -156,11 +172,12 @@
                         </div>
 
                     </div>
+                    <span class="animate scroll" style="--i:3;"></span>
                 </div>
             </div>
 
             <div class="skills-column">
-                <h3 class="title">Professional Skills</h3>
+                <h3 class="title">Professional Skills<span class="animate scroll" style="--i:5;"></span></h3>
 
                 <div class="skills-box">
                     <div class="skills-content">
@@ -186,6 +203,7 @@
                         </div>
 
                     </div>
+                    <span class="animate scroll" style="--i:6;"></span>
                 </div>
             </div>
 
@@ -193,7 +211,7 @@
     </section>
 
     <section class="contact" id="contact">
-        <h2 class="heading">Contate <span>Me</span></h2>
+        <h2 class="heading">Contate <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <form action="#">
             <div class="input-box">
@@ -205,6 +223,8 @@
                     <input type="text" placeholder="Email Address" required>
                     <span class="focus"></span>
                 </div>
+
+                <span class="animate scroll" style="--i:3;"></span>
             </div>
 
             <div class="input-box">
@@ -216,15 +236,21 @@
                     <input type="text" placeholder="Email Subject" required>
                     <span class="focus"></span>
                 </div>
+
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
 
             <div class="textarea-field">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
                 <span class="focus"></span>
+
+                <span class="animate scroll" style="--i:7;"></span>
             </div>
 
             <div class="btn-box btns">
                 <button type="submit" class="btn">Submit</button>
+
+                <span class="animate scroll" style="--i:9;"></span>
             </div>
 
         </form>
@@ -233,10 +259,14 @@
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by DevBritto | All Rights Reserved.</p>
+
+            <span class="animate scroll" style="--i:1;"></span>
         </div>
 
         <div class="footer-iconTop">
             <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+
+            <span class="animate scroll" style="--i:3;"></span>
         </div>
     </footer>
 
